making hero and importing Avenir font

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,37 @@
     <link rel="stylesheet" href="dist/css/main.css">
 </head>
 <body>
-    <h1> Hi </h1>
+    <section class="hero">
+        <div class="hero__content">
+            <h1 class="hero__content__branding">
+                <img src="./dist/images/disneyplus.svg" alt="Disney+">
+            </h1>
+            <h3 class="title--small">
+                As Melhores Histórias, em um só lugar.
+            </h3>
+            <p>
+                <a href="" class="link-text">Assinar o Disney+</a>
+                <br>
+                <spam class="text">
+                    R$27,90/mês. Sem contrato.
+                </spam>
+            </p>
+            <ul class="hero__content__combos">
+                <li class="hero__content__combos__combo">
+                    <img src="./dist/images/logos/disney_star_plus.png" alt="Combo Star+ Disney+">
+                    <button>Assine Agora</button>
+                    <span class="text">R$ 45,90/mês*</span>
+                </li>
+                <li class="hero__content__combos__combo"> 
+                    <img src="./dist/images/logos/disney_star_plus_starzplay.png" alt="Combo Star+ Disney+">
+                    <button>Assine Agora</button>
+                    <span class="text">R$ 45,90/mês*</span>
+                </li>
+            </ul>
+            <p class="text--small">
+                *Preço promocional por tempo limitado. Após o período promocional, o preço será de R$ 54,90/mês.
+            </p>
+        </div>
+    </section>
 </body>
 </html>
