making sections image-text and available-devices

--- a/index.html
+++ b/index.html
@@ -144,7 +144,69 @@
         <p class="text--small">
             *Preço promocional por tempo limitado. Após o período promocional, o preço será de R$ 27,90/mês.
         </p>
-        </section>
+    </section>
+    <section class="image-text-section">
+        <img src="./dist/images/tv_pc_tablet_celular.png" alt="Image com TV Tablet Celular">
+        <div class="image-text-section__text__container">
+            <h2 class="title--big">Assista do seu jeito</h2>
+            <p class="text--big">
+                Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de títulos em 4K não para de crescer. Além disso, para a felicidade de todos, é possível assistir em até 4 telas ao mesmo tempo. 
+            </p>
+        </div>
+    </section>
+    <section class="image-text-section image-text-section--image-full-width">
+        <img src="./dist/images/fundo_rei_leao.png" alt="Image com TV Tablet Celular">
+        <div class="image-text-section__text__container image-text-section--image-full-width__text__container">
+            <h2 class="title--big">Baixe filmes e séries</h2>
+            <p class="text--big">
+                Baixe e assista quando e onde quiser. Assim, seus filmes e séries favoritos estarão sempre com você, até mesmo sem internet.
+            </p>
+        </div>
+    </section>
+    <section class="available-devices">
+        <h2 class="title">Disponível nos seus dispositivos favoritos</h2>
+        <ul class="available-devices__list">
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/computador.png" alt="Computador">
+                <h4 class="title--small">Computador</h4>
+                <ul class="text">
+                    <li>Windows</li>
+                    <li>Mac</li>
+                    <li>Chrome OS</li>
+                </ul>
+            </li>
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/tv.png" alt="TV">
+                <h4 class="title--small">Smart TV</h4>
+                <ul class="text">
+                    <li>TVs LG</li>
+                    <li>Chromecast</li>
+                    <li>Android TV</li>
+                    <li>Apple TV</li>
+                    <li>Amazon Fire TV</li>
+                </ul>
+            </li>
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/videogames.png" alt="Tablet">
+                <h4 class="title--small">Videogames</h4>
+                <ul class="text">
+                    <li>PS4</li>
+                    <li>PS5</li>
+                    <li>Xbox</li>
+                    <li>Nintendo</li>
+                </ul>
+            </li>
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/celular.png" alt="Celular">
+                <h4 class="title--small">Celulares e tablets</h4>
+                <ul class="text">
+                    <li>Celulares e Tablets Android</li>
+                    <li>iPhone e iPad</li>
+                    <li>Tablets Amazon Fire</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
     <script src="./src/main.js"></script>
 </body>
 </html>
