--- a/index.html
+++ b/index.html
@@ -207,6 +207,58 @@
             </li>
         </ul>
     </section>
+    <section class="faq">
+        <h2 class="title">Perguntas Frequentes</h2>
+        <ul class="faq__questions">
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    O que está incluído no Disney+?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    O Disney+ oferece: </br> Experiência de entretenimento exclusiva. </br> As melhores histórias da Disney, Pixar, Marvel, Star Wars e National Geographic, tudo em um só lugar. </br>
+                    Downloads ilimitados em até 10 dispositivos compatíveis. </br> Mais de 300 títulos em 4K UHD e HDR. </br> 
+                    A possibilidade de assistir em até 4 dispositivos compatíveis simultaneamente sem custo adicional.</br> IMAX Enhanced: disponível para alguns títulos da Marvel em dispositivos compatíveis com o Disney+. </br>
+                </div>
+            </li>
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    Já tem o Disney+ ou o Star+ e quer o Combo+?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    Ao assinar o Combo+: </br> O valor da sua assinatura existente será descontado do preço do Combo+. </br>
+                    Se você assina o plano mensal, o valor que você paga mensalmente será descontado do preço do Combo+. </br>
+                    Se você tem uma assinatura anual do Disney+ cobrada diretamente pelo Disney+, não é possível mudar para o Combo+ no momento. Entre em contato com o suporte do Disney+ para conhecer suas opções. </br> 
+                    Você vai receber um e-mail com os valores detalhados assim que finalizar o pagamento. </br>
+                    Lembre-se: você pode cancelar a assinatura quando quiser. </br> No momento, apenas a assinatura mensal do Combo+ está disponível.
+                </div>
+            </li>
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    Quais as formas de pagamento posso utilizar?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    Você pode utilizar: cartão de débito, cartão de crédito, PayPal, Mercado Pago, e também empresas parceiras como Google Play Store, App Store da Apple; Mercado Livre e provedores locais de TV, telefonia e internet.
+                </div>
+            </li>
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    Como posso ver conteúdo com classificação indicativa até 16 e 18?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    Para poder acessar o catálogo completo que inclui conteúdo com classificação indicativa até 16 e 18, todos os usuários do Disney+ na América Latina devem atualizar as configurações de controle parental do perfil.
+                    É possível restringir o conteúdo de cada perfil e também adicionar um PIN de bloqueio. Os usuários que preferirem manter a configuração atual vão continuar aproveitando o Disney+ com a classificação indicativa até 14, podendo alterá-la a qualquer momento em "Editar Perfis".
+                </div>
+            </li>
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    Onde Posso assistir ao Disney+?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    O aplicativo do Disney+ está disponível em dispositivos móveis, navegadores, videogames, decodificadores e smart TVs. Confira a lista completa de dispositivos compatíveis na Central de Ajuda
+                </div>
+            </li>
+        </ul>
+    </section>
     <script src="./src/main.js"></script>
 </body>
 </html>
