--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="dist/css/main.css">
 </head>
 <body>
+    <header class="header">
+        <div class="header__container">
+            <h1>
+                <img class="header__logo" src="./dist/images/disneyplus.svg" alt="Disney+">
+            </h1>
+            <ul class="headder__links">
+                <li class="headder__links__item">
+                    <a href="#" class="button button--secondary">Assine Agora</a>
+                </li>
+                <li class="headder__links__item">
+                    <a href="#" class="button button--dark">Entrar</a>
+            </ul>
+        </div>
+    </header>
     <section class="hero">
         <div class="hero__content">
             <h1 class="hero__content__branding">
