--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <h1>
                 <img class="header__logo" src="./dist/images/disneyplus.svg" alt="Disney+">
             </h1>
-            <ul class="headder__links">
-                <li class="headder__links__item">
+            <ul class="header__links">
+                <li class="header__links__item">
                     <a href="#" class="button button--secondary">Assine Agora</a>
                 </li>
-                <li class="headder__links__item">
+                <li class="header__links__item">
                     <a href="#" class="button button--dark">Entrar</a>
             </ul>
         </div>
@@ -169,7 +169,10 @@
         </div>
     </section>
     <section class="image-text-section image-text-section--image-full-width">
-        <img src="./dist/images/fundo_rei_leao.png" alt="Image com TV Tablet Celular">
+        <picture>
+            <source media="(max-width: 768px)" srcset="./dist/images/fundo_rei_leao_celular.png"/>
+            <img src="./dist/images/fundo_rei_leao.png" alt="Image com TV Tablet Celular">
+        </picture>
         <div class="image-text-section__text__container image-text-section--image-full-width__text__container">
             <h2 class="title--big">Baixe filmes e séries</h2>
             <p class="text--big">
