changing imgs and faq

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Streaming Landing Page</title>
+    <title>All Star Wars Streaming Landing Page</title>
     <link rel="stylesheet" href="dist/css/main.css">
     <link rel="icon" href="./src/images/favicon.ico" type="image/x-icon">
 </head>
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="header__container">
             <h1>
-                <img class="header__logo" src="./dist/images/disneyplus.svg" alt="Disney+">
+                <img class="header__logo" src="./dist/images/star-wars.svg" alt="Guerra Nas Estrelas">
             </h1>
             <ul class="header__links">
                 <li class="header__links__item">
@@ -26,139 +26,82 @@
     <section class="hero">
         <div class="hero__content">
             <h1 class="hero__content__branding">
-                <img src="./dist/images/disneyplus.svg" alt="Disney+">
+                <img src="./dist/images/guerraNasEstrelas.svg" alt="Guerra Nas Estrelas">
             </h1>
             <h3 class="title--small">
                 As Melhores Histórias, em um só lugar.
             </h3>
             <p>
-                <a href="" class="link-text">Assinar o Disney+</a>
+                <a href="" class="link-text">Assinar o Guerra Nas Estrelas 1080p</a>
                 <br>
                 <spam class="text">
-                    R$27,90/mês. Sem contrato.
+                    R$7,90/mês. com contrato.
                 </spam>
             </p>
             <ul class="hero__content__combos">
                 <li class="hero__content__combos__combo">
-                    <img src="./dist/images/logos/disney_star_plus.png" alt="Combo Star+ Disney+">
-                    <button class="button">Assine Agora</button>
-                    <span class="text">R$ 45,90/mês*</span>
+                    <button class="button">Assine Mensal 4k</button>
+                    <span class="text">R$ 14,90/mês com contrato</span>
                 </li>
                 <li class="hero__content__combos__combo"> 
-                    <img src="./dist/images/logos/disney_star_plus_starzplay.png" alt="Combo Star+ Disney+">
-                    <button class="button">Assine Agora</button>
-                    <span class="text">R$ 45,90/mês*</span>
+                    <button class="button">Assine Anual 4k</button>
+                    <span class="text">R$ 129,90/ano</span>
                 </li>
             </ul>
             <p class="text--small">
-                *Preço promocional por tempo limitado. Após o período promocional, o preço será de R$ 54,90/mês.
+                *Preço promocional por tempo limitado. Após o período promocional, o preço será de R$ 24,90/mês.
             </p>
         </div>
     </section>
     <section class="shows">
         <nav class="shows__tabs">
             <button data-tab-button="em_breve" class="shows__tabs__button shows__tabs__button--is-active">
-                Em breve
+                Filmes
             </button>
             <button data-tab-button="populares" class="shows__tabs__button">
-                Mais Populares
-            </button>
-            <button data-tab-button="star_plus" class="shows__tabs__button">
-                Mais no Star+
+                Series
             </button>
         </nav>
         <ul data-tab-id="em_breve" class="shows__list shows__list--is-active">
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/filmes/ep1.png" alt="Episodio 1">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/desencantada.jpg" alt="Desencantada">
+                <img src="./dist/images/filmes/ep2.png" alt="Episodio 2">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/lobisomem.jpg" alt="lobisomem">
+                <img src="./dist/images/filmes/ep3.png" alt="Episodio 3">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/sem_limites.jpg" alt="Sem Limites">
+                <img src="./dist/images/filmes/ep4.png" alt="Episodio 4">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/the_santa_clauses.jpg" alt="Santa Clauses">
+                <img src="./dist/images/filmes/ep5.png" alt="Episodio 5">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/willow.jpg" alt="willow">
+                <img src="./dist/images/filmes/ep6.png" alt="Episodio 6">
             </li>
         </ul>
         <ul data-tab-id="populares" class="shows__list">
             <li class="shows__list__item">
-                <img src="./dist/images/mais_populares/bluey.jpg" alt="Bluey">
+                <img src="./dist/images/seriado/ahsoka.png" alt="Seriado Ahsoka">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/mais_populares/cavaleira_da_lua.jpg" alt="Cavaleiro da Lua">
+                <img src="./dist/images/seriado/andor.png" alt="Seriado Andor">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/mais_populares/o_incrivel_dr_pol.jpg" alt="Dr Pol">
+                <img src="./dist/images/seriado/cloneWars.png" alt="Seriado Clone Wars">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/mais_populares/obi_wan.jpg" alt="Obi wan">
+                <img src="./dist/images/seriado/obi_wan.jpg" alt="Seriado Obi wan">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/mais_populares/red.jpg" alt="Red">
+                <img src="./dist/images/seriado/mando.png" alt="Seriado Mando">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/mais_populares/tudo_igual_sqn.jpg" alt="Tudo Igual">
+                <img src="./dist/images/seriado/hanSolo.png" alt="Seriado Han Solo">
             </li>
         </ul>
-        <ul data-tab-id="star_plus" class="shows__list">
-            <li class="shows__list__item">
-                <img src="./dist/images/mais_no_star_plus/belair.jpg" alt="Belair">
-            </li>
-            <li class="shows__list__item">
-                <img src="./dist/images/mais_no_star_plus/libertadores.jpg" alt="Libertadores">
-            </li>
-            <li class="shows__list__item">
-                <img src="./dist/images/mais_no_star_plus/nba.jpg" alt="NBA">
-            </li>
-            <li class="shows__list__item">
-                <img src="./dist/images/mais_no_star_plus/os_simpson.jpg" alt="Simpsons">
-            </li>
-            <li class="shows__list__item">
-                <img src="./dist/images/mais_no_star_plus/premier_league.jpg" alt="Premier">
-            </li>
-            <li class="shows__list__item">
-                <img src="./dist/images/mais_no_star_plus/the_kardashians.jpg" alt="The Kardashians">
-            </li>
-        </ul>
-    </section>
-    <section class="plans">
-        <h2 class="title--big">Escolha seu Plano</h2>
-        <ul class="plans__list">
-            <li class="plans__list__item">
-                <img src="./dist/images/logos/disneyplus_underline.png" alt="Disney+">
-                <strong class="title--small">R$33,90*</strong>
-                <p class="text--big">
-                    Assista a filmes, séries e documentários da Disney, Pixar, Marvel, Star Wars e National Geographic.
-                </p>
-                <button class="button">Assine agora</button>
-            </li>
-            <li class="plans__list__item">
-                <img src="./dist/images/logos/disney_star_plus_sm.png" alt="Disney+">
-                <strong class="title--small">R$55,90*</strong>
-                <p class="text--big">
-                    Combo com Disney+ e Star+ Os melhores torneios e ligas esportivas do mundo ao vivo com a ESPN Produções locais, programas, séries e filmes premiados exclusivos do Star+
-                </p>
-                <button class="button">Assine agora</button>
-            </li>
-            <li class="plans__list__item">
-                <img src="./dist/images/logos/disney_star_plus_starzplay_underline.png" alt="Disney+">
-                <strong class="title--small">R$65,90*</strong>
-                <p class="text--big">
-                    Pacote com Disney+, Star+ e Starzplay. A melhor seleção de filmes, séries e programas de TV premiados.
-                </p>
-                <button class="button">Assine agora</button>
-            </li>
-        </ul>
-        <p class="text--small">
-            *Preço promocional por tempo limitado. Após o período promocional, o preço será de R$ 27,90/mês.
-        </p>
     </section>
     <section class="image-text-section">
         <img src="./dist/images/tv_pc_tablet_celular.png" alt="Image com TV Tablet Celular">
@@ -171,15 +114,10 @@
     </section>
     <section class="image-text-section image-text-section--image-full-width">
         <picture>
-            <source media="(max-width: 768px)" srcset="./dist/images/fundo_rei_leao_celular.png"/>
-            <img src="./dist/images/fundo_rei_leao.png" alt="Image com TV Tablet Celular">
+            <source media="(max-width: 768px)" srcset="./dist/images/fundo_celular.png"/>
+            <img src="./dist/images/fundo_poster.png" alt="Image com TV Tablet Celular">
         </picture>
-        <div class="image-text-section__text__container image-text-section--image-full-width__text__container">
-            <h2 class="title--big">Baixe filmes e séries</h2>
-            <p class="text--big">
-                Baixe e assista quando e onde quiser. Assim, seus filmes e séries favoritos estarão sempre com você, até mesmo sem internet.
-            </p>
-        </div>
+
     </section>
     <section class="available-devices">
         <h2 class="title">Disponível nos seus dispositivos favoritos</h2>
@@ -230,24 +168,21 @@
         <ul class="faq__questions">
             <li class="faq__questions__item">
                 <div class="faq__questions__item__question" data-faq-question>
-                    O que está incluído no Disney+?
+                    O que está incluído no Guerra Nas Estrelas?
                 </div>
                 <div class="faq__questions__item__answer text--big">
-                    O Disney+ oferece: </br> Experiência de entretenimento exclusiva. </br> As melhores histórias da Disney, Pixar, Marvel, Star Wars e National Geographic, tudo em um só lugar. </br>
-                    Downloads ilimitados em até 10 dispositivos compatíveis. </br> Mais de 300 títulos em 4K UHD e HDR. </br> 
-                    A possibilidade de assistir em até 4 dispositivos compatíveis simultaneamente sem custo adicional.</br> IMAX Enhanced: disponível para alguns títulos da Marvel em dispositivos compatíveis com o Disney+. </br>
+                    O Guerra Nas Estrelas oferece: </br> Experiência de entretenimento exclusiva. </br> As melhores histórias da Guerra nas Estrelas, incluindo as trilogias clássicas, os spin-offs e as novas séries originais tudo em um só lugar. </br>
+                    Downloads ilimitados em até 10 dispositivos compatíveis. </br> Mais de 30 títulos em 4K UHD e HDR. </br> 
+                    A possibilidade de assistir em até 4 dispositivos compatíveis simultaneamente sem custo adicional.</br> IMAX Enhanced: disponível para alguns títulos recentes em dispositivos compatíveis com o Guerra Nas Estrelas. </br>
                 </div>
             </li>
             <li class="faq__questions__item">
                 <div class="faq__questions__item__question" data-faq-question>
-                    Já tem o Disney+ ou o Star+ e quer o Combo+?
+                    Quando vou receber o Poster?
                 </div>
                 <div class="faq__questions__item__answer text--big">
-                    Ao assinar o Combo+: </br> O valor da sua assinatura existente será descontado do preço do Combo+. </br>
-                    Se você assina o plano mensal, o valor que você paga mensalmente será descontado do preço do Combo+. </br>
-                    Se você tem uma assinatura anual do Disney+ cobrada diretamente pelo Disney+, não é possível mudar para o Combo+ no momento. Entre em contato com o suporte do Disney+ para conhecer suas opções. </br> 
-                    Você vai receber um e-mail com os valores detalhados assim que finalizar o pagamento. </br>
-                    Lembre-se: você pode cancelar a assinatura quando quiser. </br> No momento, apenas a assinatura mensal do Combo+ está disponível.
+                    Se você se inscreveu em nossa assinatura que inclui um pôster, ele será enviado para o endereço fornecido durante o cadastro. </br> O envio geralmente leva de 5 a 10 dias úteis após a confirmação da sua assinatura. </br>
+                    Fique atento ao e-mail de confirmação com detalhes sobre o rastreamento do seu pedido! </br> No momento, apenas a assinatura anual inclui o pôster de bonus.
                 </div>
             </li>
             <li class="faq__questions__item">
@@ -263,23 +198,23 @@
                     Como posso ver conteúdo com classificação indicativa até 16 e 18?
                 </div>
                 <div class="faq__questions__item__answer text--big">
-                    Para poder acessar o catálogo completo que inclui conteúdo com classificação indicativa até 16 e 18, todos os usuários do Disney+ na América Latina devem atualizar as configurações de controle parental do perfil.
-                    É possível restringir o conteúdo de cada perfil e também adicionar um PIN de bloqueio. Os usuários que preferirem manter a configuração atual vão continuar aproveitando o Disney+ com a classificação indicativa até 14, podendo alterá-la a qualquer momento em "Editar Perfis".
+                    Para poder acessar o catálogo completo que inclui conteúdo com classificação indicativa até 16 e 18, todos os usuários do Guerra Nas Estrelas na América Latina devem atualizar as configurações de controle parental do perfil.
+                    É possível restringir o conteúdo de cada perfil e também adicionar um PIN de bloqueio. Os usuários que preferirem manter a configuração atual vão continuar aproveitando o Guerra Nas Estrelas com a classificação indicativa até 14, podendo alterá-la a qualquer momento em "Editar Perfis".
                 </div>
             </li>
             <li class="faq__questions__item">
                 <div class="faq__questions__item__question" data-faq-question>
-                    Onde Posso assistir ao Disney+?
+                    Há uma avaliação gratuita disponível?
                 </div>
                 <div class="faq__questions__item__answer text--big">
-                    O aplicativo do Disney+ está disponível em dispositivos móveis, navegadores, videogames, decodificadores e smart TVs. Confira a lista completa de dispositivos compatíveis na Central de Ajuda
+                    Sim! Nós oferecemos uma avaliação gratuita de 7 dias para que você possa explorar todo o conteúdo de Guerra nas Estrelas antes de se comprometer com uma assinatura. Aproveite para assistir a filmes icônicos e séries emocionantes!
                 </div>
             </li>
         </ul>
     </section>
     <footer class="footer">
         <div class="footer__container">
-            <img class="footer__logo" src="./dist/images/disneyplus.svg" alt="Disney+">
+            <img class="footer__logo" src="./dist/images/guerraNasEstrelas.svg" alt="Guerra Nas Estrelas">
         <ul class="footer__links">
             <li class="footer__links__item">
                 <div class="language-selector">
@@ -309,14 +244,14 @@
                 <a href="#" class="text--small">Ajuda</a>
             </li>
             <li class="footer__links__item">
-                <a href="#" class="text--small">Sobre o Disney+</a>
+                <a href="#" class="text--small">Sobre o Guerra Nas Estrelas</a>
             </li>
         </ul>
         <p class="text--small">
-            ® 2024 Disney, Disney+ e The Walt Disney Company. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.
+            ® 2024 Max, Guerra Nas Estrelas e The Walt Disney Company. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.
         </p>
         <p class="text--small">
-            Disney+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Disney+ é comercializado por The Walt Disney Company (Brasil) Ltda., World Trade Center, Av. Das Nações Unidas, 12.551, 12.555, 12.559, Piso 10, São Paulo/SP – CEP 04578-903, Brasil e CNPJ/M 73.042.962/0004-20
+            Guerra Nas Estrelas é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Guerra Nas Estrelas é comercializado por The Walt Disney Company (Brasil) Ltda., World Trade Center, Av. Das Nações Unidas, 12.551, 12.555, 12.559, Piso 10, São Paulo/SP – CEP 04578-903, Brasil e CNPJ/M 73.042.962/0004-20
         </p>
         </div>
     </footer>
