--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Star Wars Streaming Landing Page</title>
-    <link rel="stylesheet" href="dist/css/main.css">
-    <link rel="icon" href="./src/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href=".images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header class="header">
         <div class="header__container">
             <h1>
-                <img class="header__logo" src="./dist/images/star-wars.svg" alt="Guerra Nas Estrelas">
+                <img class="header__logo" src=".images/star-wars.svg" alt="Guerra Nas Estrelas">
             </h1>
             <ul class="header__links">
                 <li class="header__links__item">
@@ -26,7 +26,7 @@
     <section class="hero">
         <div class="hero__content">
             <h1 class="hero__content__branding">
-                <img src="./dist/images/guerraNasEstrelas.svg" alt="Guerra Nas Estrelas">
+                <img src=".images/guerraNasEstrelas.svg" alt="Guerra Nas Estrelas">
             </h1>
             <h3 class="title--small">
                 As Melhores Histórias, em um só lugar.
@@ -64,47 +64,47 @@
         </nav>
         <ul data-tab-id="em_breve" class="shows__list shows__list--is-active">
             <li class="shows__list__item">
-                <img src="./dist/images/filmes/ep1.png" alt="Episodio 1">
+                <img src=".images/filmes/ep1.png" alt="Episodio 1">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/filmes/ep2.png" alt="Episodio 2">
+                <img src=".images/filmes/ep2.png" alt="Episodio 2">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/filmes/ep3.png" alt="Episodio 3">
+                <img src=".images/filmes/ep3.png" alt="Episodio 3">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/filmes/ep4.png" alt="Episodio 4">
+                <img src=".images/filmes/ep4.png" alt="Episodio 4">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/filmes/ep5.png" alt="Episodio 5">
+                <img src=".images/filmes/ep5.png" alt="Episodio 5">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/filmes/ep6.png" alt="Episodio 6">
+                <img src=".images/filmes/ep6.png" alt="Episodio 6">
             </li>
         </ul>
         <ul data-tab-id="populares" class="shows__list">
             <li class="shows__list__item">
-                <img src="./dist/images/seriado/ahsoka.png" alt="Seriado Ahsoka">
+                <img src=".images/seriado/ahsoka.png" alt="Seriado Ahsoka">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/seriado/andor.png" alt="Seriado Andor">
+                <img src=".images/seriado/andor.png" alt="Seriado Andor">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/seriado/cloneWars.png" alt="Seriado Clone Wars">
+                <img src=".images/seriado/cloneWars.png" alt="Seriado Clone Wars">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/seriado/obi_wan.jpg" alt="Seriado Obi wan">
+                <img src=".images/seriado/obi_wan.jpg" alt="Seriado Obi wan">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/seriado/mando.png" alt="Seriado Mando">
+                <img src=".images/seriado/mando.png" alt="Seriado Mando">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/seriado/hanSolo.png" alt="Seriado Han Solo">
+                <img src=".images/seriado/hanSolo.png" alt="Seriado Han Solo">
             </li>
         </ul>
     </section>
     <section class="image-text-section">
-        <img src="./dist/images/tv_pc_tablet_celular.png" alt="Image com TV Tablet Celular">
+        <img src=".images/tv_pc_tablet_celular.png" alt="Image com TV Tablet Celular">
         <div class="image-text-section__text__container">
             <h2 class="title--big">Assista do seu jeito</h2>
             <p class="text--big">
@@ -114,8 +114,8 @@
     </section>
     <section class="image-text-section image-text-section--image-full-width">
         <picture>
-            <source media="(max-width: 768px)" srcset="./dist/images/fundo_celular.png"/>
-            <img src="./dist/images/fundo_poster.png" alt="Image com TV Tablet Celular">
+            <source media="(max-width: 768px)" srcset=".images/fundo_celular.png"/>
+            <img src=".images/fundo_poster.png" alt="Image com TV Tablet Celular">
         </picture>
 
     </section>
@@ -123,7 +123,7 @@
         <h2 class="title">Disponível nos seus dispositivos favoritos</h2>
         <ul class="available-devices__list">
             <li class="available-devices__list__item">
-                <img src="./dist/images/dispositivos/computador.png" alt="Computador">
+                <img src=".images/dispositivos/computador.png" alt="Computador">
                 <h4 class="title--small">Computador</h4>
                 <ul class="text">
                     <li>Windows</li>
@@ -132,7 +132,7 @@
                 </ul>
             </li>
             <li class="available-devices__list__item">
-                <img src="./dist/images/dispositivos/tv.png" alt="TV">
+                <img src=".images/dispositivos/tv.png" alt="TV">
                 <h4 class="title--small">Smart TV</h4>
                 <ul class="text">
                     <li>TVs LG</li>
@@ -143,7 +143,7 @@
                 </ul>
             </li>
             <li class="available-devices__list__item">
-                <img src="./dist/images/dispositivos/videogames.png" alt="Tablet">
+                <img src=".images/dispositivos/videogames.png" alt="Tablet">
                 <h4 class="title--small">Videogames</h4>
                 <ul class="text">
                     <li>PS4</li>
@@ -153,7 +153,7 @@
                 </ul>
             </li>
             <li class="available-devices__list__item">
-                <img src="./dist/images/dispositivos/celular.png" alt="Celular">
+                <img src=".images/dispositivos/celular.png" alt="Celular">
                 <h4 class="title--small">Celulares e tablets</h4>
                 <ul class="text">
                     <li>Celulares e Tablets Android</li>
@@ -214,11 +214,11 @@
     </section>
     <footer class="footer">
         <div class="footer__container">
-            <img class="footer__logo" src="./dist/images/guerraNasEstrelas.svg" alt="Guerra Nas Estrelas">
+            <img class="footer__logo" src=".images/guerraNasEstrelas.svg" alt="Guerra Nas Estrelas">
         <ul class="footer__links">
             <li class="footer__links__item">
                 <div class="language-selector">
-                    <img src="./dist/images/icones/globe.svg" alt="Golobo do mundo">
+                    <img src=".images/icones/globe.svg" alt="Golobo do mundo">
                     <select>
                         <option>English</option>
                         <option selected>Português</option>
@@ -255,6 +255,6 @@
         </p>
         </div>
     </footer>
-    <script src="dist\js\main.js"></script>
+    <script src="js\main.js"></script>
 </body>
 </html>
